		is performed on the long filenames.
		Implemented "mbfile import" function, this imports complete
		areas from files.bbs information.
		Added "mbfile toberep" function, this gives an overview of the
		toberep database. The program mbtoberep does this as well, but
		that one gives a complete dump and is for developer use.
		The "mbfile index" function now also writes files.bbs files,
		the index.html files for http download and 00index files in
		all available areas. The files.bbs files have download
		counters included.
		The mbfile check function now converts the short filenames
		to DOS 8.3 filenames. (The first time this logs lots of
		errors).
		The mbfile list function now gives a listing of the contents
		of a file area if the area number is given as argument.
		Implemented "mbfile move" command. You can only move one file
		at the same time.
		Implemented "mbfile delete" and "mbfile undelete" commands.
		The command mbfile check now removes obsolete file databases.
		Fixes for Sparc systems.
		Fixed index screens to prevent negative totals with large
		filebases.
		Added standard doctype header and commentline to the html 
		pages.
		The mbfile check function deletes double filerecords in the
		database.

	mball:
		The index function is now obsolete, this is added to mbfile.
		You may need to adjust your scripts that call "mball index".
		Fixes for Sparc systems.
		Fixed to prevent negative values with large filebases.

	mbaff:
		Fixes for Sparc systems.
		Fix for large filebases, could not run longer then 10 minutes.

	mbindex:
		Fixes for Sparc systems.

	mbdiff:
		Fixes for Sparc systems.

	mbfbgen:
		Obsolete and removed from the distribution. The function is
		now in mbfile.

	fbutil:
		Removed from the distribution. Thanks to Johannes Lundberg,
		2:206/149@fidonet to let us use his program until mbfile could
		take over.



v0.33.20        10-Feb-2002

	upgrade:


	general:
		Added structures for area maintenance with area lists.


