@@ -41,7 +41,6 @@
 
 
 extern int		do_quiet;		/* Supress screen output    */
-extern char		*tearline;
 
 
 /*
@@ -157,7 +156,7 @@ void Msg_Bot(fidoaddr UseAka, char *Org)
 	sprintf(temp, "With regards, %s", CFG.sysop_name);
 	MsgText_Add2(temp);
 	MsgText_Add2((char *)"");
-	MsgText_Add2(tearline);
+	MsgText_Add2(TearLine());
 
 	if (UseAka.point)
 		sprintf(aka, "(%d:%d/%d.%d)", UseAka.zone, UseAka.net, UseAka.node, UseAka.point);
