@@ -53,7 +53,6 @@
  * External declarations
  */
 extern	int	do_quiet;
-extern	char	*tearline;
 
 
 
@@ -134,7 +133,7 @@ int Ping(faddr *f, faddr *t, FILE *fp, int intransit)
 	fprintf(np, "======================================================================\r");
 
 	fprintf(np, "\rWith regards, %s\r\r", CFG.sysop_name);
-	fprintf(np, "%s\r", tearline);
+	fprintf(np, "%s\r", TearLine());
 	Now = time(NULL) - (gmt_offset((time_t)0) * 60);
 	rc = postnetmail(np, from, f, NULL, (char *)"Re: Ping", Now, 0x0000, FALSE);
 	tidy_faddr(from);
