@@ -41,7 +41,6 @@
 
 
 extern int		do_quiet;		/* Supress screen output    */
-extern char		*tearline;
 
 
 
@@ -211,7 +210,7 @@ void Post(char *To, long Area, char *Subj, char *File, char *Flavor)
 	 */
 	aka = calloc(40, sizeof(char));
 	MsgText_Add2((char *)"");
-	MsgText_Add2(tearline);
+	MsgText_Add2(TearLine());
 
 	if (msgs.Aka.point)
 		sprintf(aka, "(%d:%d/%d.%d)", msgs.Aka.zone, msgs.Aka.net, msgs.Aka.node, msgs.Aka.point);
